# libvirt-qatlm-conf

./: CMakeLists.txt  ConfItem.cpp  ConfItem.h  LICENSE  LibvirtConf.cpp  LibvirtConf.h  README.md  main.cpp
test/: CMakeLists.txt  testConfItem.cpp  testLibvirtConf.cpp
test/data/testLibvirtConf/: qemu.conf
